{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 38,
  "lineage": "2db1dbc7-ad2e-b311-3253-e6b59a44f1f8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:838135940574:vpc/vpc-0b9e860c2a1ee71fe",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0260ba9deacc25e3f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04f7a02cfa077d3be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9e860c2a1ee71fe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a9ab2a61d8f23970",
            "owner_id": "838135940574"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:838135940574:loadbalancer/app/terraform-asg-example/c67d76cf5b4b8a78",
            "arn_suffix": "app/terraform-asg-example/c67d76cf5b4b8a78",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-asg-example-1949645702.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:838135940574:loadbalancer/app/terraform-asg-example/c67d76cf5b4b8a78",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03582ad0f2ee37d5a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ae79d96c756926f5"
              },
              {
                "subnet_id": "subnet-0af0574c80eeb0d17"
              },
              {
                "subnet_id": "subnet-0b2ea71aaeb94835b"
              }
            ],
            "subnets": [
              "subnet-0ae79d96c756926f5",
              "subnet-0af0574c80eeb0d17",
              "subnet-0b2ea71aaeb94835b"
            ],
            "vpc_id": "vpc-0b9e860c2a1ee71fe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:838135940574:listener/app/terraform-asg-example/c67d76cf5b4b8a78/d8207c88ca15416c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/html",
                    "message_body": "404: Page Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:838135940574:listener/app/terraform-asg-example/c67d76cf5b4b8a78/d8207c88ca15416c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:838135940574:loadbalancer/app/terraform-asg-example/c67d76cf5b4b8a78",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:838135940574:targetgroup/terraform-asg-example/55205c76e73c79da",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:838135940574:listener-rule/app/terraform-asg-example/c67d76cf5b4b8a78/d8207c88ca15416c/9567095c1ce1c78f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:838135940574:listener-rule/app/terraform-asg-example/c67d76cf5b4b8a78/d8207c88ca15416c/9567095c1ce1c78f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:838135940574:listener/app/terraform-asg-example/c67d76cf5b4b8a78/d8207c88ca15416c",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:838135940574:targetgroup/terraform-asg-example/55205c76e73c79da",
            "arn_suffix": "targetgroup/terraform-asg-example/55205c76e73c79da",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:838135940574:targetgroup/terraform-asg-example/55205c76e73c79da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-asg-example",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b9e860c2a1ee71fe"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:838135940574:security-group/sg-03582ad0f2ee37d5a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03582ad0f2ee37d5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": "",
            "owner_id": "838135940574",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9e860c2a1ee71fe"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:838135940574:security-group/sg-0de176ab3a00b4181",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0de176ab3a00b4181",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": "",
            "owner_id": "838135940574",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9e860c2a1ee71fe"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}